[tool.poetry]
name = "logging-in-python"
version = "0.1.0"
description = ""
authors = ["markkvdb <github@mvanderbroek.com>"]
readme = "README.md"
packages = [{include = "logging_in_python"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
rich = "^12.6.0"
notifiers = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
